src/objects/NA_Deposit__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Instituition__c</fullName>
        <label>Financial_Instituition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chevron Federal Credit Union</fullName>
                </value>
                <value>
                    <fullName>Spectrum Credit Union</fullName>
                </value>
                <value>
                    <fullName>Bank of America</fullName>
                </value>
                <value>
                    <fullName>Chase Bank</fullName>
                </value>
                <value>
                    <fullName>Wells Fargo</fullName>
                </value>
                <value>
                    <fullName>Citibank</fullName>
                </value>
                <value>
                    <fullName>US Bank</fullName>
                </value>
                <value>
                    <fullName>Capital One</fullName>
                </value>
                <value>
                    <fullName>Ally</fullName>
                </value>
                <value>
                    <fullName>USAA</fullName>
                </value>
                <value>
                    <fullName>Other Credit Union</fullName>
                </value>
                <value>
                    <fullName>Other Financial Institution</fullName>
                </value>
                <value>
                    <fullName>Spectrum Federal Credit Union</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_Assessment__c</fullName>
        <label>Needs_Assessment</label>
        <referenceTo>Needs_Assesment__c</referenceTo>
        <relationshipLabel>NA_Deposits</relationshipLabel>
        <relationshipName>NA_Deposits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rate__c</fullName>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Checking</fullName>
                </value>
                <value>
                    <fullName>Savings</fullName>
                </value>
                <value>
                    <fullName>Certificate of Deposit (CD)</fullName>
                </value>
                <value>
                    <fullName>Money Market Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>NA_Deposit</label>
    <nameField>
        <label>NA_Deposits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NA_Deposits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>